opam-version: "1.2"
version:"0.1"
maintainer: "gabriele.baldoni@adlinktech.com"
license: "ELP 2"
authors:      "Gabriele Baldoni"
homepage:     "https://fog05.io"
bug-reports:  "https://github.com/eclipse-fog05/sdk-ocaml/issues/"
dev-repo:     "https://github.com/eclipse-fog05/sdk-ocaml.git"

build: [
 [make "atd"]
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [

  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune" {= "1.11.4"}
  "cmdliner" {= "1.0.4"}
  "re" {= "1.9.0"}
  "yojson" {= "1.7.0"}
  "logs" {= "0.7.0"}
  "lwt" {= "5.1.1"}
  "lwt_ppx" {= "1.2.3"}
  "logs-syslog" {= "0.2.1"}
  "apero-core" {= "0.4.5"}
  "apero-net" {= "0.4.5"}
  "yaks-common" {= "0.3.0"}
  "yaks-ocaml" {= "0.3.0"}
]


synopsis : "Eclipse fog05 OCaml SDK"
description: """
Eclipse fog05 OCaml SDK is a collection of OCaml libraries and types used by
Eclipse fog05 components"""
