(library
  (name            fos_sdk)
  (public_name     fos-sdk)
  (wrapped     false)
  (libraries       yaks-common yaks-ocaml cmdliner apero-core logs-syslog.unix apero-net yojson atdgen lwt logs logs.fmt logs.cli fmt fmt.cli fmt.tty)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord lwt_ppx ppx_cstruct)))
